--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=c9jSED"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=c9jSED" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=CbbdaI"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=CbbdaI" type="text/css">
 
   
   
@@ -79,7 +79,7 @@
                 
             </div>
             <div class="col-12 col-lg">
-                <p class="mbr-side-description mbr-fonts-style mb-0 align-center display-7"><strong><br></strong><br><br><br><strong>Self-Taught Gameplay Programmer and Technical Artist</strong><br><strong>Experience:</strong> 6 years<br><br><strong>Summary:</strong><br>Demonstrated expertise in developing a diverse range of video games, including third-person, first-person, RTS, and open-world genres.<br>Proven leadership skills, successfully managing a team of over 10 members.<br>Completed and launched more than 10 game titles.<br>worked with wide range of hardware including VR headsets, motion capture suit and Arduino devices and sensors.<br><br></p>
+                <p class="mbr-side-description mbr-fonts-style mb-0 align-center display-7"><strong><br></strong><br><br><br><strong>Self-Taught Gameplay Programmer and Technical Artist</strong><br><strong>Experience:</strong> 6 years<br><br><strong>Summary:</strong><br>Demonstrated expertise in developing a diverse range of video games, including third-person, first-person and RTS games.<br>Proven leadership skills, successfully managing a team of over 10 members.<br>Completed and launched more than 10 game titles.<br>worked with wide range of hardware including VR headsets, motion capture suit and Arduino devices and sensors.<br><br></p>
             </div>
         </div>
     </div>
@@ -469,7 +469,7 @@
       </div>
     </div>
   </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3344339" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-creator.html">Free AI Website Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3344339" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
